# opencode-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
docs/design/: design.md
docs/plans/: plan.md
docs/superpowers/plans/: 2026-04-05-opencode-mcp.md
opencode_mcp/: errors.py  opencode_client.py  opencode_process.py  server.py  tools.py
opencode_mcp/core/: __init__.py  client.py  process.py
opencode_mcp/helpers/: __init__.py  models.py  validation.py
opencode_mcp/providers/: __init__.py
opencode_mcp/providers/gemini/: __init__.py  provider.py  runner.py
opencode_mcp/providers/opencode/: __init__.py  client.py  provider.py
opencode_mcp/providers/qwen/: __init__.py  provider.py  runner.py
polycode/: server.py  session_manager.py  tools.py
polycode/core/: __init__.py  client.py  process.py
polycode/helpers/: __init__.py  cli_runner.py  models.py  validation.py
polycode/providers/: __init__.py  base.py
polycode/providers/gemini/: __init__.py  provider.py  router.py  runner.py
polycode/providers/opencode/: __init__.py  client.py  process.py  provider.py  router.py
polycode/providers/qwen/: __init__.py  provider.py  router.py  runner.py
tests/: conftest.py  test_cli_runner.py  test_errors.py  test_integration.py  test_opencode_client.py  test_opencode_process.py  test_session_manager.py  test_tools.py
